[tool.poetry]
name = "poetry-407"
version = "0.1.0"
description = ""
authors = ["jakecoffman <jake@jakecoffman.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "0.79.1"
toml = {git = "ssh://git@github.com/uiri/toml", rev = "0.10.1"}
#sentry-processors = {git = "ssh://git@github.com/gr4vy/sentry.git", rev = "v0.8.0"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
