[tool.poetry]
name = "poetry-407"
version = "0.1.0"
description = ""
authors = ["jakecoffman <jake@jakecoffman.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "*"
toml = {git = "https://github.com/uiri/toml"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
